fix: supprimer les guillemets autour de la variable d'image dans la tâche de téléchargement

--- a/docker/images/Taskfile.yml
+++ b/docker/images/Taskfile.yml
@@ -78,7 +78,7 @@ tasks:
       echo "$images" | while read -r image; do
         if [ -n "$image" ] && [ "$image" != "null" ]; then
           echo "⬇️  Téléchargement de $image..."
-          docker pull "$image" || echo "⚠️  Échec du téléchargement de $image"
+          docker pull $image || echo "⚠️  Échec du téléchargement de $image"
         fi
       done
 
