fix: supprimer les espaces autour des noms d'images lors du téléchargement

--- a/docker/images/Taskfile.yml
+++ b/docker/images/Taskfile.yml
@@ -76,6 +76,7 @@ tasks:
       # Téléchargement individuel de chaque image
       grep -E "^\s*image:" "{{.COMPOSE_FILE}}" | sed 's/.*image:\s*//' | sed 's/["'\'']*//g' | sort | uniq | while read -r image; do
         if [ -n "$image" ] && [ "$image" != "null" ]; then
+          image=$(echo "$image" | xargs)
           echo "⬇️  Téléchargement de $image..."
           docker pull "$image" || echo "⚠️  Échec du téléchargement de $image"
         fi
