fix: ajouter une vérification du format d'image avant le téléchargement

--- a/docker/images/Taskfile.yml
+++ b/docker/images/Taskfile.yml
@@ -77,8 +77,13 @@ tasks:
       grep -E "^\s*image:" "{{.COMPOSE_FILE}}" | sed 's/.*image:\s*//' | sed 's/["'\'']*//g' | sort | uniq | while read -r image; do
         if [ -n "$image" ] && [ "$image" != "null" ]; then
           image=$(echo "$image" | xargs)
-          echo "⬇️  Téléchargement de $image..."
-          docker pull "$image" || echo "⚠️  Échec du téléchargement de $image"
+          echo "DEBUG: image='$image'"
+          if [[ "$image" =~ ^[a-zA-Z0-9._/-]+:[a-zA-Z0-9._-]+$ ]]; then
+            echo "⬇️  Téléchargement de $image..."
+            docker pull "$image" || echo "⚠️  Échec du téléchargement de $image"
+          else
+            echo "⚠️  Format d'image invalide: '$image'"
+          fi
         fi
       done
 
