--- a/lint/Taskfile.yml
+++ b/lint/Taskfile.yml
@@ -9,7 +9,7 @@ tasks:
     - sh: command -v docker
       msg: "Docker n'est pas installé ou accessible"
     cmds:
-    - docker compose -f {{.DOCKERCOMPOSEFILE}} config </dev/null
+    - docker compose -f {{.DOCKERCOMPOSEFILE}} config
 
   action:
     desc: "Linter tous les fichiers Action (.yml dans .github/workflows)"
